fix style on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,18 @@ body {
 .u-flex-center {
   justify-content: center; }
 
+.u-show-tablet {
+  display: none; }
+  @media (max-width: 48em) {
+    .u-show-tablet {
+      display: block !important; } }
+
+.u-hide-tablet {
+  display: block; }
+  @media (max-width: 48em) {
+    .u-hide-tablet {
+      display: none !important; } }
+
 .btn, .btn:link, .btn:visited {
   display: inline-block;
   position: relative;
